Bug 140730 - UI, keyboard: Form field properties dialog does not get keyboard focus when it opens
Summary: UI, keyboard: Form field properties dialog does not get keyboard focus when i...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:7.6.0 target:7.5.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks: a11y, Accessibility
  Show dependency treegraph
 
Reported: 2021-03-01 09:35 UTC by Tim in 't Veld
Modified: 2023-04-17 12:22 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tim in 't Veld 2021-03-01 09:35:18 UTC
In Writer on Windows 10, when the properties dialog of a form control is opened it does not automatically get keyboard focus and it seems the only way to give it keyboard focus is to use the mouse. 
Steps to reproduce:
1.	Open a writer document containing a form field, select the form field and press alt + enter
2.	The form properties dialog opens
Expected behavior: keyboard focus moves to the name field
Actual behavior: keyboard focus does not move there and I have not found a way to give the keyboard properties dialog focus without using the mouse. However I can dismiss the dialog by pressing escape. 

Note: I am using the NVDA screen reader, bug also appears to be reproducible if NVDA is not running. 

From Libreoffice About dialog:
Version: 7.0.4.2 (x64)
Build ID: dcf040e67528d9187c66b2379df5ea4407429775
CPU threads: 16; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); GI: nl-NL
Calc: CL
Comment 1 Raji 2021-03-01 12:39:20 UTC
Hello Tim,

Thank you for reporting the bug. I can confirm that the bug is present.
In
Version: 7.1.0.3 (x64) / LibreOffice Community
Build ID: f6099ecf3d29644b5008cc8f48f42f4a40986e4c
CPU threads: 8; OS: Windows 10.0 Build 19041; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL
Comment 2 QA Administrators 2023-03-02 03:25:13 UTC Comment hidden (obsolete)
Comment 3 Michael Weghorn 2023-04-12 13:32:36 UTC
For gen, the dialog stopped getting focus in commit

commit 1efeb17837c22499f00299c033ae59ba3910f7d7
Author: Caolán McNamara
Date:   Mon Nov 4 13:06:04 2019 +0000

    weld Property Browser

Pending Gerrit change: https://gerrit.libreoffice.org/c/core/+/150284
Comment 4 Commit Notification 2023-04-12 19:22:52 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/cf9f73ae78aa9654064abde8411ea2f921c38354

tdf#140730 a11y: Focus form control property dlg when it starts

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-04-17 12:22:50 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/fb6bad9d25b3c5f085e1c125fc3df7f41152414d

tdf#140730 a11y: Focus form control property dlg when it starts

It will be available in 7.5.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.