tdf#140730 a11y: Focus form control property dlg when it starts

Make sure the dialog gets focus again when it
starts after having been welded in

    commit 1efeb17837c22499f00299c033ae59ba3910f7d7
    Date:   Mon Nov 4 13:06:04 2019 +0000

        weld Property Browser

(Tested with gen, kf5 and on Windows.)

Change-Id: Ie5d28a60b459735d1f1fa4c2d5d679f3d5a27cec
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150284
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
(cherry picked from commit cf9f73ae78aa9654064abde8411ea2f921c38354)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150496
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>