svx/source/form/fmPropBrw.cxx
@@ -176,6 +176,7 @@ FmPropBrw::FmPropBrw(const Reference< XComponentContext >& _xORB, SfxBindings* _
     , m_bInitialStateChange(true)
     , m_pParent(_pParent)
     , m_nAsyncGetFocusId(nullptr)
+    , m_xDialogBox(m_xBuilder->weld_box("dialog-vbox1"))
     , m_xContainer(m_xBuilder->weld_container("container"))
     , m_xORB(_xORB)
 {
@@ -393,6 +394,7 @@ void FmPropBrw::FillInfo( SfxChildWinInfo& rInfo ) const
 
 IMPL_LINK_NOARG( FmPropBrw, OnAsyncGetFocus, void*, void )
 {
+    m_xDialogBox->child_grab_focus();
     m_nAsyncGetFocusId = nullptr;
 }
 
